add cat button functionality

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <div>
-        <button id="fetch">Fetch new dog image</button>
-        <div id="dog-container" class="dog-container">
-
+        <div id="btn-container">
+            <button id="fetch-dog">Fetch new dog image</button>
+            <button id="fetch-cat">Fetch new cat image</button>
+        </div>
+        
+        <div id="pic-container" class="pic-container">
         </div>
     </div>
 </body>
